# autonomous-robot

./: .gitmodules  readme.md
base_drive/: CMakeLists.txt
base_drive/main/: CMakeLists.txt  app_main.cpp  mpu6050.cpp
base_drive/main/bus/: i2c_bus.cpp
base_drive/main/orientation/: orientation_filter.cpp  orientation_filter.h  orientation_task.h
base_drive/main/sensors/: mpu6050.cpp
robot-firmware/: CMakeLists.txt  sdkconfig.defaults
robot-firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp
robot-firmware/main/bus/: i2c_bus.cpp  i2c_bus.h
robot-firmware/main/drive/: drive_base.cpp  drive_base.h  yahboom_motor_driver.cpp  yahboom_motor_driver.h
robot-firmware/main/micro_ros/: micro_ros_cmd_vel.cpp  micro_ros_cmd_vel.h  micro_ros_int32_publisher.c  micro_ros_int32_publisher.h  micro_ros_odometry.cpp  micro_ros_odometry.h  micro_ros_serial_transport.c  micro_ros_serial_transport.h
robot-firmware/main/odometry/: differential_odometry.cpp  differential_odometry.h  odometry_task.cpp  odometry_task.h  odometry_types.cpp  odometry_types.h
robot-firmware/main/orientation/: mpu6050.cpp  mpu6050.h  orientation_filter.cpp  orientation_filter.h  orientation_task.cpp  orientation_task.h
